--- a/index.html
+++ b/index.html
@@ -18,32 +18,30 @@
 <body>
     <!-- aside -->
     <aside>
-        <div class="row">
-            <div class="aside_box">
-                <h1>
-                    <a href="#main" class="pc_logo">KIM<br>SU<br>YEON</a>
-                    <a href="#main" class="m_logo">KIM SU YEON</a>
-                </h1>
-                <nav class="pc_menu">
-                    <ul>
-                        <li class="active"><a href="#main" class="text">Home</a></li>
-                        <li><a href="#intro" class="text">About me</a></li>
-                        <li><a href="#skills" class="text">Skills</a></li>
-                        <li><a href="#portfolio" class="text">Portfolio</a></li>
-                        <li><a href="#design" class="text">Design</a></li>
-                        <li><a href="#contact" class="text">Contact</a></li>
-                    </ul>
-                </nav>
-                <div class="mode_switch pc_switch">
-                    <span class="mode_tit">Dark Mode</span>
-                    <label class="dark_mode">
-                        <input type="checkbox">
-                        <span class="onoff_switch"></span>
-                    </label>
-                </div>
-                <div class="mBtn">
-                    <a href="#" class="ir_pm">모바일 버튼<span></span><span></span><span></span></a>
-                </div>
+        <div class="aside_box">
+            <h1>
+                <a href="#main" class="pc_logo">KIM<br>SU<br>YEON</a>
+                <a href="#main" class="m_logo">KIM SU YEON</a>
+            </h1>
+            <nav class="pc_menu">
+                <ul>
+                    <li class="active"><a href="#main" class="text">Home</a></li>
+                    <li><a href="#intro" class="text">About me</a></li>
+                    <li><a href="#skills" class="text">Skills</a></li>
+                    <li><a href="#portfolio" class="text">Portfolio</a></li>
+                    <li><a href="#design" class="text">Design</a></li>
+                    <li><a href="#contact" class="text">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="mode_switch pc_switch">
+                <span class="mode_tit">Dark Mode</span>
+                <label class="dark_mode">
+                    <input type="checkbox">
+                    <span class="onoff_switch"></span>
+                </label>
+            </div>
+            <div class="mBtn">
+                <a href="#" class="ir_pm">모바일 버튼<span></span><span></span><span></span></a>
             </div>
         </div>
         <div class="m_menu">
@@ -71,64 +69,69 @@
 
     <!-- main -->
     <div class="content">
-        <section id="main">
-            <div class="emoji"></div>
-            <div class="text_box">
-                <span class="t_text"></span><span class="line">|</span>
-            </div>
-            <div class="scroll_box">
-                <a href="#">
-                    <span></span><span></span><span></span>
-                </a>
-            </div>
-        </section>
-        <section id="intro" class="mtb90">
-            <h2 class="title_bold">About me</h2>
-            <div class="intro_box">
-                <div class="me">
-                    <div class="me_img ir_pm">
-                        프로필 사진
+        <div class="container">
+            <div class="row">
+                <section id="main">
+                    <div class="emoji"></div>
+                    <div class="text_box">
+                        <span class="t_text"></span><span class="line">|</span>
                     </div>
-                    <div class="back1"></div>
-                    <div class="back2"></div>
-                    <p class="hashtag">#신입#꼼꼼함#계속공부중#일본어가능</p>
-                </div>
-                <div class="intro_text">
-                    <p><b>이름</b><span>김수연</span></p>
-                    <p><b>거주지</b><span>대전광역시</span></p>
-                    <p><b>학력</b><span>금강대학교 일본어통번역학과 졸업</span></p>
-                    <p><b>자격증</b><span>웹디자인기능사</span><br><span class="space">ACA Visual Design Adobe Photoshop CC 2015</span><br><span class="space">ACA Graphic Design and Illustration using</span>
-                        <br><span class="space">Adobe Illustrator CC 2015</span></p>
-                    <p><b>이메일</b><span>36ksy@naver.com</span></p>
-                    <p class="resolution">"div 태그가 여러 콘텐츠들을 한데 아우르는 것처럼<br>
-                        사람들과도 잘 아우르는 웹퍼블리셔가 되겠습니다."</p>
-                </div>
-            </div>
-        </section>
-        <section id="skills">
-            <p>스킬</p>
-        </section>
-        <section id="portfolio">
-            <div id="section1">
-                <a href="https://ksysky.github.io/portfolio/coffeenie/index.html">coffeenie (개인 포폴)</a>
-            </div>
-            <div id="section2">
-                <a href="https://ksysky.github.io/portfolio/espoir/index.html">espoir (개인 포폴)</a>
-            </div>
-            <div id="section3">
-                <a href="https://ksysky.github.io/portfolio/andbag/index.html">and bag (개인 포폴)</a>
-            </div>
-        </section>
-        <section id="design">
-            <p>디자인</p>
-        </section>
-        <!-- //main -->
+                    <div class="scroll_box">
+                        <a href="#">
+                            <span></span><span></span><span></span>
+                        </a>
+                    </div>
+                </section>
+                <section id="intro" class="mtb90">
+                    <h2 class="title_bold">About me</h2>
+                    <div class="intro_box">
+                        <div class="me">
+                            <div class="me_img ir_pm">
+                                프로필 사진
+                            </div>
+                            <div class="back1"></div>
+                            <div class="back2"></div>
+                            <p class="hashtag">#신입#꼼꼼함#계속공부중#일본어가능</p>
+                        </div>
+                        <div class="intro_text">
+                            <p><b>이름</b><span>김수연</span></p>
+                            <p><b>거주지</b><span>대전광역시</span></p>
+                            <p><b>학력</b><span>금강대학교 일본어통번역학과 졸업</span></p>
+                            <p><b>자격증</b><span>웹디자인기능사</span><br><span class="space">ACA Photoshop
+                                    CC
+                                    2015</span><br><span class="space">ACA Illustrator CC 2015</span></p>
+                            <p><b>이메일</b><span>36ksy@naver.com</span></p>
+                            <p class="resolution">"div 태그가 여러 콘텐츠들을 한데 아우르는 것처럼<br>
+                                사람들과도 잘 아우르는 웹퍼블리셔가 되겠습니다."</p>
+                        </div>
+                    </div>
+                </section>
+                <section id="skills">
+                    <h2 class="title_bold">Skills</h2>
+                </section>
+                <section id="portfolio">
+                    <div id="section1">
+                        <a href="https://ksysky.github.io/portfolio/coffeenie/index.html">coffeenie (개인 포폴)</a>
+                    </div>
+                    <div id="section2">
+                        <a href="https://ksysky.github.io/portfolio/espoir/index.html">espoir (개인 포폴)</a>
+                    </div>
+                    <div id="section3">
+                        <a href="https://ksysky.github.io/portfolio/andbag/index.html">and bag (개인 포폴)</a>
+                    </div>
+                </section>
+                <section id="design">
+                    <p>디자인</p>
+                </section>
+                <!-- //main -->
 
-        <!-- footer -->
-        <footer id="contact">
-            <p>연락</p>
-        </footer>
-        <!-- //footer -->
+                <!-- footer -->
+                <footer id="contact">
+                    <p>연락</p>
+                </footer>
+                <!-- //footer -->
+            </div>
+        </div>
     </div>
 </body>
 <!-- script -->
