--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </a>
                     </div>
                 </section>
-                <section id="intro" class="mtb90">
+                <section id="intro" class="mb90">
                     <h2 class="title_bold">About me</h2>
                     <div class="intro_box">
                         <div class="me">
@@ -106,8 +106,39 @@
                         </div>
                     </div>
                 </section>
-                <section id="skills">
+                <section id="skills" class="mb90">
                     <h2 class="title_bold">Skills</h2>
+                    <div class="skill_box">
+                        <div class="box box1">
+                            <div class="circle">
+                                <div class="circle_img">
+                                    <img src="img/html5.png" alt="html5 icon"><img src="img/css5.png" alt="css5 icon">
+                                </div>
+                            </div>
+                            <span class="skill_text">사이트에 알맞는 시멘틱 코드를 사용하여 구조를 세웁니다.<br>
+                                웹 표준과 웹 접근성을 준수하여 반응형 사이트를 제작할 수 있습니다.</span>
+                        </div>
+                        <div class="box box2">
+                            <div class="circle">
+                                <div class="circle_img">
+                                    <img src="img/js.png" alt="javascript icon"><img src="img/jquery.png"
+                                        alt="jquery icon">
+                                </div>
+                            </div>
+                            <span class="skill_text">자바스크립트 ES6 문법을 이해하고 활용할 수 있습니다.<br>
+                                제이쿼리를 활용하여 다양한 애니메이션과 기능을 구현할 수 있습니다.</span>
+                        </div>
+                        <div class="box box3">
+                            <div class="circle">
+                                <div class="circle_img">
+                                    <img class="img1" src="img/photoshop.png" alt="photoshop icon"><br><img class="img2" src="img/illustrator.png"
+                                        alt="illustrator icon"><img class="img3" src="img/xd.png" alt="xd icon">
+                                </div>
+                            </div>
+                            <span class="skill_text">사진 보정 및 배너, 포스터, 아이콘 등 디자인 작업을 경험했습니다.<br>
+                                XD를 이용한 웹사이트 시안과 프로토타입 작업도 가능합니다.</span>
+                        </div>
+                    </div>
                 </section>
                 <section id="portfolio">
                     <div id="section1">
