포트폴리오 반응형

--- a/index.html
+++ b/index.html
@@ -142,125 +142,139 @@
                         </div>
                     </div>
                 </section>
-                <section id="portfolio" class="mb90">
-                    <h2 class="title_bold">PORTFOLIO</h2>
-                    <div class="swiper-container slider">
-                        <div class="swiper-wrapper">
-                            <!-- Slides -->
-                            <div class="swiper-slide">
-                                <div class="mockup_img">
-                                    <img src="img/coffeenie_mockup.png" alt="커피니 목업">
-                                </div>
-                                <div class="slide_text">
-                                    <div class="slide_tit">
-                                        <p>Responsive Web</p>
-                                        <h3>커피니 리뉴얼 사이트</h3>
-                                    </div>
-                                    <div class="slide_btn">
-                                        <a class="site" href="https://ksysky.github.io/portfolio/coffeenie/index.html">사이트 보러가기
-                                            <svg
-                                                xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
-                                                viewBox="0 0 13 4.191">
-                                                <path id="path_4" data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
-                                                    transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
-                                                    stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
-                                            </svg>
-                                        </a>
-                                        <a class="work" href="#">작업 내용
-                                            <svg
-                                                xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
-                                                viewBox="0 0 13 4.191">
-                                                <path id="path_4" data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
-                                                    transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
-                                                    stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
-                                            </svg>
-                                        </a>
-                                    </div>
-                                </div>
+            </div>
+            <section id="portfolio" class="mb90">
+                <h2 class="title_bold">Portfolio</h2>
+                <div class="swiper-container slider">
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide">
+                            <div class="mockup_img">
+                                <img src="img/coffeenie_mockup.png" alt="커피니 목업">
                             </div>
-                            <div class="swiper-slide">
-                                <div class="mockup_img">
-                                    <img src="img/espoir_mockup.png" alt="에스쁘아 목업">
+                            <div class="slide_text">
+                                <div class="slide_tit">
+                                    <p>Responsive Web</p>
+                                    <h3>커피니 리뉴얼 사이트</h3>
                                 </div>
-                                <div class="slide_text">
-                                    <div class="slide_tit">
-                                        <p>Responsive Web</p>
-                                        <h3>에스쁘아 모작 사이트</h3>
-                                    </div>
-                                    <div class="slide_btn">
-                                        <a class="site" href="https://ksysky.github.io/portfolio/espoir/index.html">사이트 보러가기
-                                            <svg
-                                                xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
-                                                viewBox="0 0 13 4.191">
-                                                <path id="path_4" data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
-                                                    transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
-                                                    stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
-                                            </svg>
-                                        </a>
-                                        <a class="work" href="#">작업 내용
-                                            <svg
-                                                xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
-                                                viewBox="0 0 13 4.191">
-                                                <path id="path_4" data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
-                                                    transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
-                                                    stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
-                                            </svg>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="mockup_img">
-                                    <img src="img/andbag_mockup.png" alt="앤드백 목업">
-                                </div>
-                                <div class="slide_text">
-                                    <div class="slide_tit">
-                                        <p>Responsive Web</p>
-                                        <h3>앤드백 리뉴얼 사이트</h3>
-                                    </div>
-                                    <div class="slide_btn">
-                                        <a class="site" href="https://ksysky.github.io/portfolio/andbag/index.html">사이트 보러가기
-                                            <svg
-                                                xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
-                                                viewBox="0 0 13 4.191">
-                                                <path id="path_4" data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
-                                                    transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
-                                                    stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
-                                            </svg>
-                                        </a>
-                                        <a class="work" href="#">작업 내용
-                                            <svg
-                                                xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
-                                                viewBox="0 0 13 4.191">
-                                                <path id="path_4" data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
-                                                    transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
-                                                    stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
-                                            </svg>
-                                        </a>
-                                    </div>
+                                <div class="slide_btn">
+                                    <a class="site" href="https://ksysky.github.io/portfolio/coffeenie/index.html">사이트
+                                        보러가기
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
+                                            viewBox="0 0 13 4.191">
+                                            <path id="path_4" data-name="path 4" class="blue"
+                                                d="M875.443,2491.8h12l-4.659-3"
+                                                transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
+                                                stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
+                                        </svg>
+                                    </a>
+                                    <a class="work" href="#">작업 내용
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
+                                            viewBox="0 0 13 4.191">
+                                            <path id="path_4" data-name="path 4" class="blue"
+                                                d="M875.443,2491.8h12l-4.659-3"
+                                                transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
+                                                stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
+                                        </svg>
+                                    </a>
                                 </div>
                             </div>
                         </div>
-                        <!-- If we need pagination -->
-                        <div class="swiper-pagination"></div>
+                        <div class="swiper-slide">
+                            <div class="mockup_img">
+                                <img src="img/espoir_mockup.png" alt="에스쁘아 목업">
+                            </div>
+                            <div class="slide_text">
+                                <div class="slide_tit">
+                                    <p>Responsive Web</p>
+                                    <h3>에스쁘아 모작 사이트</h3>
+                                </div>
+                                <div class="slide_btn">
+                                    <a class="site" href="https://ksysky.github.io/portfolio/espoir/index.html">사이트 보러가기
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
+                                            viewBox="0 0 13 4.191">
+                                            <path id="path_4" data-name="path 4" class="blue"
+                                                d="M875.443,2491.8h12l-4.659-3"
+                                                transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
+                                                stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
+                                        </svg>
+                                    </a>
+                                    <a class="work" href="#">작업 내용
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
+                                            viewBox="0 0 13 4.191">
+                                            <path id="path_4" data-name="path 4" class="blue"
+                                                d="M875.443,2491.8h12l-4.659-3"
+                                                transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
+                                                stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="mockup_img">
+                                <img src="img/andbag_mockup.png" alt="앤드백 목업">
+                            </div>
+                            <div class="slide_text">
+                                <div class="slide_tit">
+                                    <p>Responsive Web</p>
+                                    <h3>앤드백 리뉴얼 사이트</h3>
+                                </div>
+                                <div class="slide_btn">
+                                    <a class="site" href="https://ksysky.github.io/portfolio/andbag/index.html">사이트 보러가기
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
+                                            viewBox="0 0 13 4.191">
+                                            <path id="path_4" data-name="path 4" class="blue"
+                                                d="M875.443,2491.8h12l-4.659-3"
+                                                transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
+                                                stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
+                                        </svg>
+                                    </a>
+                                    <a class="work" href="#">작업 내용
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
+                                            viewBox="0 0 13 4.191">
+                                            <path id="path_4" data-name="path 4" class="blue"
+                                                d="M875.443,2491.8h12l-4.659-3"
+                                                transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
+                                                stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
 
-                        <!-- If we need navigation buttons -->
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
+            </section>
+            <div class="row">
+                <section id="design" class="mb90">
+                    <h2 class="title_bold">Design</h2>
+                    <div class="design_box clearfix">
+                        <div class="img1"><img src="img/xbanner_mockup_safe.jpg" alt="x배너1"></div>
+                        <div class="img2"><img src="img/xbanner_mockup_infor.jpg" alt="x배너2"></div>
+                        <div class="img3"><img src="img/iceCream_mockup.jpg" alt="아이스크림 목업"></div>
+                        <div class="img4"><img src="img/sushi_mockup.jpg" alt="초밥 목업"></div>
+                        <div class="img5"><img src="img/fan_banner.png" alt="선풍기 배너"></div>
+                        <div class="img6"><img src="img/nut_banner_thumbnail.jpg" alt="nut 배너"></div>
+                        <div class="img7"><img src="img/info_banner.jpg" alt="배송 일정 안내"></div>
+                        <div class="img8"><img src="img/detail_page_thumbnail.jpg" alt="상세 페이지"></div>
                     </div>
                 </section>
-                <section id="design">
-                    <p>디자인</p>
-                </section>
-                <!-- //main -->
-
-                <!-- footer -->
-                <footer id="contact">
-                    <p>연락</p>
-                </footer>
-                <!-- //footer -->
             </div>
+            <!-- //main -->
+
+            <!-- footer -->
+            <footer id="contact">
+                <p>연락</p>
+            </footer>
+            <!-- //footer -->
         </div>
+    </div>
     </div>
 </body>
 <!-- script -->
